Webpack: Fixed page reload[404] issue

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prestart": "npm run build",
     "build": "webpack",
-    "start": "webpack-dev-server --mode development",
+    "start": "node server",
     "test": "jest -u",
     "test:watch": "jest -u --watchAll"
   },
