--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autobind-decorator": "^2.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "codeclimate-test-reporter": "^0.5.0",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
