--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,10 @@ jobs:
             ./cc-test-reporter before-build
             npm test -- --coverage
             ./cc-test-reporter after-build --exit-code $?
-      deployment:
-        staging:
-          branch: master
-          heroku:
-            appname: roam-webchallenge
+      - run:
+          name: Deploy to Heroku
+          command: |
+            git push heroku master
+
 
 
