--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           commands:
             # ...removed lines for brevity
             # Deploy the app to heroku
-            - git push https://git.heroku.com/roam-webchallenge.git $CIRCLE_SHA1:refs/heads/master
+            git push https://git.heroku.com/roam-webchallenge.git $CIRCLE_SHA1:refs/heads/master
 
 
 
